--- a/contact.html
+++ b/contact.html
@@ -4,22 +4,57 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CONTACT</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <ul>
-            <li><a href="index.html">HOME</a></li>
-            <li><a href="about.html">ABOUT</a></li>
-            <li><a href="contact.html">CONTACT</a></li>
-
-        </ul>
+    <header> 
+        <a class="headera" href="about.html">ABOUT</a>
+        <a href="index.html"><img src="img/next.png" alt="logo"></a>
+        <a class="headera" href="contact.html">CONTACT US</a>
     </header>
-    <footer>
-        <ul>
-            <li>Armeina, Tavush, Ijevan Valance 16</li>
-            <li><a href="mailto:blog@blog.blog">blog@blog.blog</a></li>
-            <li><a href="tel: +374111111">+374 11 111111</a></li>
-        </ul>
+        <form action="">
+            <div>
+                <label for="name">Name Surname</label>
+                <input id="name" type="text" required>
+            </div>
+            <div>
+                <label for="phone">Phone Number</label>
+                <input  id="phone" type="tel" required>
+             </div>
+             <div>
+                <label for="mail">Email</label>
+                <input id="mail" type="email">
+             </div>
+             <div>
+                <label for="age">Age</label>
+                <input id="age" type="number">
+             </div>
+             <div style="display: flex;  justify-content: space-between; width: 100px; padding: 12px 0 ">
+             <div>
+                <label for="male">Male</label>
+                <input type="radio" name="gender" id="male">
+             </div>  
+             <div>
+                <label for="female">Female</label>
+                <input type="radio" name="gender" id="female">
+            </div>
+            </div>
+            <div>
+                <label for="message">Message</label>
+                <textarea name="texarea" id="message"></textarea>
+             </div>
+             <button type="submit">SUBMIT</button>
+        </form>
+    <footer style="margin-top: 40%;">
+        <div class="footer1">
+        <div id="info">CONTACT INFORMATION</div>
+        <div>Phone</div>
+        <div class="data">01111111</div>
+        <div>Gmail</div>
+        <div class="data">next@gmail.com</div>
+        </div>
     </footer>
 </body>
 </html>
