--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <div>Phone</div>
         <div class="data">01111111</div>
         <div>Gmail</div>
-        <div class="data">shop@gmail.com</div>
+        <div class="data">next@gmail.com</div>
         </div>
     </footer>
 </body>
