--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
     </div>
   </main>
 
+  <div id="animate"></div>
+
   <footer>
     <div class="footer1">
       <div id="info">CONTACT INFORMATION</div>
