--- a/index.html
+++ b/index.html
@@ -45,7 +45,16 @@
     </div>
   </main>
 
+  <ul id="list">
+   
+  </ul>
+  <button id="button1" style="width: 50px;">add</button>
+  <input id="input1" type="text" style="width: 200px; height: 30px;">
   <div id="animate"></div>
+
+  <p onclick="addfont(this)" ondblclick="removeP(this)" >text 1</p>
+  <p onclick="addfont(this)" ondblclick="removeP(this)" >text 2</p>
+  <p onclick="addfont(this)" ondblclick="removeP(this)" >text 3</p>
 
   <footer>
     <div class="footer1">
